After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 749337 - [gnome-shell search provider] excessive logging: "WARNING **: Job failed: Operation was cancelled"
[gnome-shell search provider] excessive logging: "WARNING **: Job failed: Ope...
Status: RESOLVED FIXED
Product: gnome-calendar
Classification: Applications
Component: General
3.16.x
Other Linux
: Normal minor
: 3.26
Assigned To: GNOME Calendar maintainers
GNOME Calendar maintainers
Depends on:
Blocks:
 
 
Reported: 2015-05-13 21:46 UTC by Christian Stadelmann
Modified: 2017-04-17 18:20 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Christian Stadelmann 2015-05-13 21:46:10 UTC
Steps to reproduce:
1. enable gnome calendar search provider for gnome shell (in gnome-control-center)
2. in gnome-shell go to overview
3. type something (multiple keys, until at least one calendar entry is found)
4. abort search (e.g. by pressing ESC key)

Expected:
Nothing should happen except that gnome-shell leaves search / overview

Actually happens:
Massive logging of this line:

** (gnome-calendar:5847): WARNING **: Job failed: Operation was cancelled
Comment 1 Erick Perez Castellanos 2015-05-16 02:38:27 UTC
(In reply to Christian Stadelmann from comment #0)
> Steps to reproduce:
> 1. enable gnome calendar search provider for gnome shell (in
> gnome-control-center)
> 2. in gnome-shell go to overview
> 3. type something (multiple keys, until at least one calendar entry is found)
> 4. abort search (e.g. by pressing ESC key)
> 
> Expected:
> Nothing should happen except that gnome-shell leaves search / overview
> 
> Actually happens:
> Massive logging of this line:
> 
> ** (gnome-calendar:5847): WARNING **: Job failed: Operation was cancelled

This log line is usually harmless. We should find the case when we force the cancelling and suppress the log.
Comment 2 Christian Stadelmann 2015-05-31 17:07:37 UTC
The log is generated by gcal-manager.c:181 in thread_job_data_free. How about just adding another condition (that it is G_IO_ERROR_CANCELLED, not G_IOI_ERROR_CANCELLED as the comment in line 180 suggests) to suppress this warning?

This is a sample backtrace generating the warning:
thread_job_data_free() at gcal-manager.c:181 0x430326	
thread_job_thread() at gcal-manager.c:203 0x4307a7	
g_thread_proxy() at gthread.c:764 0x7ffff2f440a5	
start_thread() at pthread_create.c:333 0x7ffff2627555	
clone() at clone.S:109 0x7ffff214af3d
Comment 3 Erick Perez Castellanos 2015-06-01 00:46:57 UTC
(In reply to Christian Stadelmann from comment #2)
> The log is generated by gcal-manager.c:181 in thread_job_data_free. How
> about just adding another condition (that it is G_IO_ERROR_CANCELLED, not
> G_IOI_ERROR_CANCELLED as the comment in line 180 suggests) to suppress this
> warning?
> 
> This is a sample backtrace generating the warning:
> thread_job_data_free() at gcal-manager.c:181 0x430326	
> thread_job_thread() at gcal-manager.c:203 0x4307a7	
> g_thread_proxy() at gthread.c:764 0x7ffff2f440a5	
> start_thread() at pthread_create.c:333 0x7ffff2627555	
> clone() at clone.S:109 0x7ffff214af3d

Yes, as the comment said. I'll fix as soon as I got some time.
Comment 4 Erick Perez Castellanos 2015-10-21 13:55:54 UTC
Pushed fix as commit e611f87