manager: prevent excessive logging.

Skip "Job failed" warning when the error is caused by ouselves cancelling the
thread.

Bug: https://bugzilla.gnome.org/show_bug.cgi?id=749337